--- a/TradeProcessor.Logger/TradeProcessor.Logger.csproj
+++ b/TradeProcessor.Logger/TradeProcessor.Logger.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Logger.cs" />
+    <Compile Include="LoggerExtensionRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
