--- a/TradeProcessor.Logger/TradeProcessor.TextLogger.csproj
+++ b/TradeProcessor.Logger/TradeProcessor.TextLogger.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D72FE92F-F559-47A0-9AC3-988F31947DA6}</ProjectGuid>
+    <ProjectGuid>{CBF8E9FA-B19F-4953-BB17-EA1F5720D3AF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TradeProcessor.Infrastructure</RootNamespace>
-    <AssemblyName>TradeProcessor.Infrastructure</AssemblyName>
+    <RootNamespace>TradeProcessor.TextLogger</RootNamespace>
+    <AssemblyName>TradeProcessor.TextLogger</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -24,7 +24,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\Build\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -41,15 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CatalogProvider.cs" />
-    <Compile Include="Extensibility\ExtensionProviderAttribute.cs" />
-    <Compile Include="Extensibility\ExtensionRepository.cs" />
-    <Compile Include="Extensibility\ExtensionRepositoryLoader.cs" />
-    <Compile Include="PlatformServiceHub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SafeDirectoryCatalog.cs" />
+    <Compile Include="TextLogger.cs" />
+    <Compile Include="TextLoggingExtension.cs" />
+    <Compile Include="TextLoggingExtensionProvider.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\TradeProcessor.Infrastructure\TradeProcessor.Infrastructure.csproj">
+      <Project>{D72FE92F-F559-47A0-9AC3-988F31947DA6}</Project>
+      <Name>TradeProcessor.Infrastructure</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TradeProcessor.Interfaces\TradeProcessor.Interfaces.csproj">
       <Project>{8B2DA4F0-213D-48EB-B59D-820DDFEA4023}</Project>
       <Name>TradeProcessor.Interfaces</Name>
