--- a/TradeProcessor.Bll/TradeProcessor.Bll.csproj
+++ b/TradeProcessor.Bll/TradeProcessor.Bll.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5E77D671-ECC2-4141-AC40-CC25C42BA745}</ProjectGuid>
+    <ProjectGuid>{1514FC0A-D28D-490A-A77D-8EE1A57DF90C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TradeProcessor.Repository</RootNamespace>
-    <AssemblyName>TradeProcessor.Repository</AssemblyName>
+    <RootNamespace>TradeProcessor.Bll</RootNamespace>
+    <AssemblyName>TradeProcessor.Bll</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,7 +31,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,10 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TradeRepository.cs" />
+    <Compile Include="AppController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TradeRepositoryDbExtension.cs" />
-    <Compile Include="TradeRepositoryExtensionProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TradeProcessor.Domain\TradeProcessor.Domain.csproj">
