--- a/TradeProcessor.Domain/TradeProcessor.Domain.csproj
+++ b/TradeProcessor.Domain/TradeProcessor.Domain.csproj
@@ -40,7 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TradeRecord.cs" />
+    <Compile Include="Interfaces\ITradeLineRule.cs" />
+    <Compile Include="Models\TradeRecord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
