--- a/TradeProcessor.Rules/TradeProcessor.Rules.csproj
+++ b/TradeProcessor.Rules/TradeProcessor.Rules.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5E77D671-ECC2-4141-AC40-CC25C42BA745}</ProjectGuid>
+    <ProjectGuid>{E29099AB-D306-47ED-9DF9-21361CA08016}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TradeProcessor.Repository</RootNamespace>
-    <AssemblyName>TradeProcessor.Repository</AssemblyName>
+    <RootNamespace>TradeProcessor.Rules</RootNamespace>
+    <AssemblyName>TradeProcessor.Rules</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,10 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TradeRepository.cs" />
+    <Compile Include="LineMalformedRule.cs" />
+    <Compile Include="TradeAmountValidRule.cs" />
+    <Compile Include="TradePriceValidRule.cs" />
+    <Compile Include="TradeCurrenciesMalformedRule.cs" />
+    <Compile Include="Extensibility\TradeLineRulesExtension.cs" />
+    <Compile Include="Extensibility\TradeLineRulesExtensionProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TradeRepositoryDbExtension.cs" />
-    <Compile Include="TradeRepositoryExtensionProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TradeProcessor.Domain\TradeProcessor.Domain.csproj">
